<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/icon_bild"
            android:title="@string/about_us"
            />
        <item
            android:id="@+id/nav_unidades"
            android:icon="@drawable/ic_unidades_black"
            android:title="@string/nav_unidades"
            />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/ic_exam"
            android:title="@string/nav_exam"
            />
        <item
            android:id="@+id/nav_meus_exames"
            android:icon="@drawable/ic_exam"
            android:title="@string/nav_my_exam"
            />
        <item
            android:id="@+id/nav_agendamento"
            android:icon="@drawable/ic_agendamento"
            android:title="@string/nav_agendamento"
            />
        <item
            android:id="@+id/nav_fale_conosco"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/nav_fale_conosco"
            />
        <item
            android:id="@+id/nav_localizacao"
            android:icon="@drawable/ic_localizacao"
            android:title="@string/nav_localizacao"
            />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/nav_config"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout"
            />
    </group>
</menu>