<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_buscar"
        android:icon="@drawable/ic_buscar_black"
        android:title="@string/action_buscar"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item android:id="@+id/action_adicionar"
        android:icon="@drawable/ic_adicionar_black"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item android:id="@+id/action_atualizar"
        android:icon="@drawable/ic_atualizar_bl"
        android:title="@string/action_atualizar"
        app:showAsAction="always" />
    <item android:id="@+id/action_novo"
        android:title="@string/action_novo"
        app:showAsAction="never" />
</menu>