<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ProfileUpdateActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="PREENCHA / ALTERE OS DADOS ABAIXO"
            android:textColor="#EEE" />

        <EditText
            android:id="@+id/first_name_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/first_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/last_name_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/last_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/data_nasc_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="20dp"
            android:drawablePadding="30dp"
            android:drawableLeft="@drawable/ic_calendar_update"
            android:background="@drawable/login_edittext_bg"
            android:inputType="text|number"
            android:hint="@string/dataNasc_hint"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/cpf_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/cpf_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />
        <EditText
            android:id="@+id/rg_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/rg_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/logradouro_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/endereco"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />


        <EditText
            android:id="@+id/numero_endereco_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/nEndereco"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/complemento_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/complemento"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/bairro_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/bairro"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/cidade_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/cidade"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/estado_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/estado"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/cep_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/login_edittext_bg"
                android:hint="@string/cep"
                android:paddingRight="20dp"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC" />
            <ImageButton
                android:id="@+id/consulta_cep_icon"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_consultar_cep"
                android:layout_marginLeft="-120dp"
                android:paddingTop="30dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/email_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/update_data"
            android:textColor="@color/colorAccent"
            android:onClick="update"/>
    </LinearLayout>

</ScrollView>