<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.exdon.ope.LoginActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="PREENCHA OS DADOS ABAIXO"
            android:textColor="#EEE" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/first_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/last_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="#EEE" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/email_hint"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#EEE" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/password_confirm"
            android:textColor="#EEE" />

        <EditText
            android:id="@+id/confirm_password_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="#CCC" />-->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"
            android:onClick="onClickLogin"/>
    </LinearLayout>

</ScrollView>